Updated with a special static handler.

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,2 +1,7 @@
 {% extends "layout.html" %}
 {% block title %}Welcome to ClinDesk{% endblock %}
+{% block body %}
+<center>
+<img src="{{ static('clindesk-logo.png') }}" />
+</center>
+{% endblock %}
