--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,5 +1,4 @@
 <!doctype html>
 <title>{% block title %}{% endblock %}</title>
-<center>
-<img src="{{ url_for('static', filename='clindesk-logo.png') }}" />
-</center>
+{% block body %}{% endblock %}
+
