--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,258 @@
-{% extends "layout.html" %}
+{% extends "base.html" %}
 {% block title %}Welcome to ClinDesk{% endblock %}
-{% block body %}
-<center>
-<img src="{{ static('clindesk-logo.png') }}" />
-</center>
+{% block tagline %}{% include "tagline_bigslider.html" %}{% endblock %}
+{% block tagline_text %}{% endblock %}
+{% block maincontent %}
+    <div class="container mainContent">
+    <div class="row-fluid">
+        <div class="span9">
+            <div class="innerSpacer">
+                <div class="portfolioItem">
+                    <a href="project_single.html" class="peOver">
+                        <img src="{{ static('img/content/imgpost4.jpg') }}" alt="project" />
+                    </a>
+                </div>
+            </div>
+        </div>
+
+        <!--description-->
+        <div class="span3">
+
+            <div class="item-description">
+                <h3>
+                    <a href="project_single.html">Welcome to ClinDesk</a>
+                </h3>
+                <div class="subtitle">
+                    <span class="icon-file "></span><a href="#">Opening Medical Education</a>
+                </div>
+
+                <p>Here is filler text. OMG WELCOME TO US</p>
+                <br />
+                  <ul class="unstyled">
+                    <li><i class="icon-ok"></i>Feature One</li>
+                    <li><i class="icon-ok"></i>Another Feature</li>
+                    <li><i class="icon-ok"></i>Some More Info</li>
+                    <li><i class="icon-ok"></i>Gorgeous Looks</li>
+                    <li><i class="icon-ok"></i>Elegance</li>
+                  </ul>
+                <br />
+
+                <a href="#" class="btn btn-info"><i class="icon-share icon-white"></i>See the Topics</a>
+
+            </div>
+
+        </div>
+    </div>
+    </div>
+
+
+<section class="mainContentWrap">
+		<div class="container mainContent">
+			<div class="row-fluid">
+				<div class="span12">
+					<div class="row-fluid featuredContent">
+
+						<div class="span4"><h1>Who?</h1><p>
+                            ClinDesk is a team of senior medical students and resident physicians deeply familiar with medical knowledge and education. Our experiences in medical school have shaped our view that there is a disconnect between the training of doctors and the way patients understand what is happening with their health.
+                            <a href="#"><span class="label">More</span></a></p></div>
+
+						<div class="span4"><h1>What?</h1><p>
+                            ClinDesk.org is a free video library that opens medical education to patients and their supporters. Our videos are organized by medical speciality and specific disease, which walk you through the basic biology, “who and when” epidemiology, symptoms, and treatment/outcomes of each condition you or someone you know might be facing.
+                            <a href="#"><span class="label">More</span></a></p></div>
+
+
+						<div class="span4"><h1>Why?</h1><p>
+                            Our mission is to lead the transition of medical education from a proprietary to “open” process. It’s your health, so the ability to learn about it should be yours, too! We believe medical education should be accessible to everyone, especially the people most intimately connected to medicine: patients themselves.
+                            <a href="#"><span class="label">More</span></a></p></div>
+
+
+					</div>
+
+					<div class="row-fluid">
+						<div class="divider dotted clearfix"><span></span></div>
+					</div>
+
+					<!-- carousel -->
+					<div class="row-fluid relative">
+						<div class="span12">
+							<h1>Latest Projects</h1>
+						</div>
+
+						<div class="carousel-nav">
+							<div class="pull-right">
+								<a href="#" id="carouselPrev" class="prev-btn pull-left label"><i class="icon-chevron-left icon-white"></i></a>
+								<a href="#" id="carouselNext" class="next-btn pull-left label"><i class="icon-chevron-right icon-white"></i></a>
+							</div>
+						</div>
+					</div>
+
+					<div class="row-fluid carouselBox" data-height="0,0" data-slidewidth="250">
+
+						<div data-delay="0">
+							<div class="portfolioItem">
+								<a href="{{ static('img/content/homep1lb1.jpg') }}" class="peOver"
+                                  data-target="flare"
+                                  data-flare-scale="fit">
+									<img src="{{ static('img/content/port09.jpg') }}" alt="project" />
+									<span></span>
+								</a>
+								<div class="title">
+									<span class="icon-picture"></span><a href="#">Heart and Cardiovascular</a>
+								</div>
+								<p>Heart attacks, chest pain, stents, CABG, etc.</p>
+							</div>
+						</div>
+
+
+
+						<div data-delay="0">
+							<div class="portfolioItem">
+								<a href="{{ static('img/content/homegal1.jpg') }}" class="peOver"
+                                    data-target="flare"
+                                    data-flare-plugin="shutter"
+                                    data-flare-gallery="homeGal"
+                                    data-flare-scale="fillmax"
+                                    data-flare-thumb="{{ static('img/content/homegal1t.jpg') }}"
+                                    data-flare-bw="{{ static('img/content/homegal1bw.jpg') }}">
+									<img src="{{ static('img/content/port05.jpg') }}" alt="project" />
+									<span></span>
+								</a>
+								<div class="title">
+									<span class="icon-th"></span><a href="#">Fullscreen Gallery (fill)</a>
+								</div>
+								<p>Lorem ipsum dolor sitam et conse caetue adi pit mit solsz..</p>
+							</div>
+						</div>
+
+
+						<div data-delay="0">
+							<div class="portfolioItem">
+								<a data-target="flare" href="http://www.youtube.com/watch?v=AFA-rOls8YA" class="peOver">
+									<img src="{{ static('img/content/port14.jpg') }}" alt="project" />
+									<span></span>
+								</a>
+								<div class="title">
+									<span class="icon-facetime-video"></span><a href="#">Lightbox Video (YouTiube)</a>
+								</div>
+								<p>Lorem ipsum dolor sitam et conse caetue adi pit mit solsz..</p>
+							</div>
+						</div>
+
+
+                        <div data-delay="0">
+							<div class="portfolioItem">
+								<a href="project_single.html" class="peOver">
+									<img src="{{ static('img/content/port16.jpg') }}" alt="project" />
+									<span></span>
+								</a>
+								<div class="title">
+									<span class="icon-file"></span><a href="#">Project Page Link</a>
+								</div>
+								<p>Lorem ipsum dolor sitam et conse caetue adi pit mit solsz..</p>
+							</div>
+						</div>
+
+						<div data-delay="0">
+							<div class="portfolioItem">
+								<a href="project_single_video.html" class="peOver">
+									<img src="{{ static('img/content/port10.jpg') }}" alt="project" />
+									<span></span>
+								</a>
+								<div class="title">
+									<span class="icon-film"></span><a href="#">Vdieo Project Link</a>
+								</div>
+								<p>Lorem ipsum dolor sitam et conse caetue adi pit mit solsz..</p>
+							</div>
+						</div>
+
+
+						<div data-delay="0">
+							<div class="portfolioItem">
+								<a href="portfolio_1.html" class="peOver">
+									<img src="{{ static('img/content/port12.jpg') }}" alt="project" />
+									<span></span>
+								</a>
+								<div class="title">
+									<span class="icon-th-list"></span><a href="#">Portfolio</a>
+								</div>
+								<p>Lorem ipsum dolor sitam et conse caetue adi pit mit solsz..</p>
+							</div>
+						</div>
+
+
+						<div data-delay="0">
+							<div class="portfolioItem">
+								<a href="project_single_slider.html" class="peOver">
+									<img src="{{ static('img/content/port20.jpg') }}" alt="project" />
+									<span></span>
+								</a>
+								<div class="title">
+									<span class="icon-picture"></span><a href="#">Slider Project Link</a>
+								</div>
+								<p>Lorem ipsum dolor sitam et conse caetue adi pit mit solsz..</p>
+							</div>
+						</div>
+
+
+						<div data-delay="0">
+							<div class="portfolioItem">
+								<a href="project_single.html" class="peOver">
+								  <img src="{{ static('img/content/port08.jpg') }}" alt="project" />
+								  <span></span>
+								</a>
+
+								<div class="title">
+									<span class="icon-file"></span><a href="#">Project Page</a>
+								</div>
+								<p>Lorem ipsum dolor sitam et conse caetue adi pit mit solsz..</p>
+							</div>
+						</div>
+					</div>
+
+                    <!--content for the fullscreen gallery-->
+                    <div class="hiddenLightboxContent">
+
+                      <a href="{{ static('img/content/homegal2.jpg') }}" class="peOver"
+                          data-target="flare"
+                          data-flare-plugin="shutter"
+                          data-flare-gallery="homeGal"
+                          data-flare-scale="fillmax"
+                          data-flare-thumb="{{ static('img/content/homegal2t.jpg') }}"
+                          data-flare-bw="{{ static('img/content/homegal2bw.jpg') }}">
+                      </a>
+
+                      <a href="{{ static('img/content/homegal3.jpg') }}" class="peOver"
+                          data-target="flare"
+                          data-flare-plugin="shutter"
+                          data-flare-gallery="homeGal"
+                          data-flare-scale="fillmax"
+                          data-flare-thumb="{{ static('img/content/homegal3t.jpg') }}"
+                          data-flare-bw="{{ static('img/content/homegal3bw.jpg') }}">
+                      </a>
+
+                      <a href="{{ static('img/content/homegal4.jpg') }}" class="peOver"
+                          data-target="flare"
+                          data-flare-plugin="shutter"
+                          data-flare-gallery="homeGal"
+                          data-flare-scale="fillmax"
+                          data-flare-thumb="{{ static('img/content/homegal4t.jpg') }}"
+                          data-flare-bw="{{ static('img/content/homegal4bw.jpg') }}">
+                      </a>
+
+                      <a href="{{ static('img/content/homegal5.jpg') }}" class="peOver"
+                          data-target="flare"
+                          data-flare-plugin="shutter"
+                          data-flare-gallery="homeGal"
+                          data-flare-scale="fillmax"
+                          data-flare-thumb="{{ static('img/content/homegal5t.jpg') }}"
+                          data-flare-bw="{{ static('img/content/homegal5bw.jpg') }}">
+                      </a>
+
+                    </div>
+
+				</div>
+
+            </div>
+        </div>
+    </section>
 {% endblock %}
