Templates now working and routed.

--- a/templates/about.html
+++ b/templates/about.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}{% load staticfiles %}
+{% extends "base.html" %}
 {% block title %}About Us{% endblock %}
 {% block tagline_text %}About ClinDesk &amp; White Coat Academy{% endblock %}
 {% block maincontent%}       <section class="mainContentWrap" xmlns="http://www.w3.org/1999/html" xmlns="http://www.w3.org/1999/html"
@@ -43,14 +43,14 @@
                 <div class="row-fluid">
                   <div class="span4"><h3>Nick Semenkovich</h3>
                       <h4>Founder &amp; President</h4>
-                      <img src="{% static "img/heads/semenko.jpg" %}" width="150"/>
+                      <img src="{{ static('img/heads/semenko.jpg') }}" width="150"/>
                       <p>Nick hails from OMG ONE LINER BIO</p>
                   </div>
 
 
                     <div class="span4"><h3>Nick Semenkovich</h3>
                         <h4>Founder &amp; President</h4>
-                        <img src="{% static "img/heads/semenko.jpg" %}" width="150"/>
+                        <img src="{{ static('img/heads/semenko.jpg') }}" width="150"/>
                         <p>Nick hails from OMG ONE LINER BIO</p>
                     </div>
 
@@ -58,7 +58,7 @@
 
                     <div class="span4"><h3>Nick Semenkovich</h3>
                         <h4>Founder &amp; President</h4>
-                        <img src="{% static "img/heads/semenko.jpg" %}" width="150"/>
+                        <img src="{{ static('img/heads/semenko.jpg') }}" width="150"/>
                         <p>Nick hails from OMG ONE LINER BIO</p>
                     </div>
 
@@ -67,14 +67,14 @@
                   <div class="row-fluid">
                     <div class="span4"><h3>Nick Semenkovich</h3>
                         <h4>Founder &amp; President</h4>
-                        <img src="{% static "img/heads/semenko.jpg" %}" width="150"/>
+                        <img src="{{ static('img/heads/semenko.jpg') }}" width="150"/>
                         <p>Nick hails from OMG ONE LINER BIO</p>
                     </div>
 
 
                       <div class="span4"><h3>Nick Semenkovich</h3>
                           <h4>Founder &amp; President</h4>
-                          <img src="{% static "img/heads/semenko.jpg" %}" width="150"/>
+                          <img src="{{ static('img/heads/semenko.jpg') }}" width="150"/>
                           <p>Nick hails from OMG ONE LINER BIO</p>
                       </div>
 
@@ -82,7 +82,7 @@
 
                       <div class="span4"><h3>Nick Semenkovich</h3>
                           <h4>Founder &amp; President</h4>
-                          <img src="{% static "img/heads/semenko.jpg" %}" width="150"/>
+                          <img src="{{ static('img/heads/semenko.jpg') }}" width="150"/>
                           <p>Nick hails from OMG ONE LINER BIO</p>
                       </div>
 
