The comment syntax is {# #}, now that I have the docs.

--- a/templates/base.html
+++ b/templates/base.html
@@ -107,13 +107,13 @@
           <div class="container">
             <div class="row-fluid  tagline">
               <div class="span8"><h2>{% block tagline_text %}overwrite this tagline_text block{% endblock %}</h2></div>
-<!--               <div class="span4 action">
+{#               <div class="span4 action">
                   <div>
                     <a href="#" class="btn first btn-success">Learn More</a>
                     <span>or</span>
                     <a href="#" class="btn btn-info">Contact Us</a>
                   </div>
-                </div>  //-->
+                </div>  #}
             </div>
           </div> <!-- /container -->
         </section>
@@ -124,7 +124,7 @@
     <!--footer-->
     <footer>
 		<!--footer testimonail-->
-<!--
+{#
 		<section class="testimonial">
 			<div class="container">
 				<div class="row-fluid">
@@ -135,11 +135,11 @@
 
 			</div>
 		</section>
-	//-->
-<!-- No great way to deal with this. Commented the section, since it adds a cute blue bar thing. //-->
+	#}
+{# No great way to deal with this. Commented the section, since it adds a cute blue bar thing. #}
 		<section class="footerMain">
 
-<!--
+{#
 			<div class="container">
 				<div class="row-fluid">
 
@@ -209,7 +209,7 @@
 						</div>
 					</div>
 				</div>
-//-->
+#}
 			</section>
 
 			<!--footer lower-->
