--- a/templates/help.html
+++ b/templates/help.html
@@ -9,9 +9,8 @@
               <div class="span9">
                 <div class="row-fluid">
                   <div class="innerSpacer">
-
-                    <!--body search widget for mobile-->
-		    <!--
+{#
+                    <!--body search widget for mobile //-->
                     <div class="row-fluid body-search">
                       <div class="span12 widget_search">
                         <form class="form-inline" action="#" method="get" role="search">
@@ -20,8 +19,7 @@
                         </form>
                       </div>
                     </div>
-		    //-->
-
+#}
                     <div class="row-fluid pageTitle">
                       <div class="span12"><h1>FAQ Page Template</h1></div>
                     </div>
@@ -166,15 +164,15 @@
 
               <aside class="span3 sidebar">
 
+{#
                 <!--search widget-->
-		<!--
                 <div class="widget widget_search">
                   <form class="form-inline" action="#" id="searchform" method="get" role="search">
                       <input type="text" class="input-medium span3"  placeholder="Search...">
                       <button class="icon-search" type="submit"></button>
                   </form>
                 </div>
-		//-->
+#}
 
                 <!--contact details widget-->
 
