--- a/templates/base.html
+++ b/templates/base.html
@@ -221,9 +221,9 @@
 							<a class="first" href="index.html">Home</a><span>&#124;</span>
 							<a href="full_width.html">Diseases</a><span>&#124;</span>
 							<a href="elements.html">Drugs &amp; Pharm</a><span>&#124;</span>
-							<a href="portfolio_3.html">Donate</a><span>&#124;</span>
-							<a href="blog_main.html">Help &amp; FAQ</a><span>&#124;</span>
-							<a href="contact.html">About</a>
+							<a href="support.html">Donate</a><span>&#124;</span>
+							<a href="help.html">Help &amp; FAQ</a><span>&#124;</span>
+							<a href="about.html">About</a>
 						</div>
 						<div class="span3 smedia">
                           <a href="#" data-rel="tooltip" title="Facebook"  class="sm-icon sm-icon-facebook"></a>
