--- a/templates/base.html
+++ b/templates/base.html
@@ -20,8 +20,8 @@
 	<![endif]-->
 	<script type="text/javascript">(function(H){H.className=H.className.replace(/\bno-js\b/,'js')})(document.documentElement)</script>
 
-    <!-- favicon & iSO touch icons -->
-    <link rel="shortcut icon" href="{{ static('favicon.jpg') }}" />
+{#    <!-- favicon & iSO touch icons -->
+    <link rel="shortcut icon" href="{{ static('favicon.jpg') }}" /> #}
 </head>
 
 <body>
