About refactoring. Part of issue #23 and #27

--- a/templates/base.html
+++ b/templates/base.html
@@ -226,24 +226,18 @@
 							<a href="about.html">About</a>
 						</div>
 						<div class="span3 smedia">
-                          <a href="#" data-rel="tooltip" title="Facebook"  class="sm-icon sm-icon-facebook"></a>
+                          <a href="https://www.facebook.com/ClinDesk" data-rel="tooltip" title="Facebook"  class="sm-icon sm-icon-facebook"></a>
                             <a href="#" data-rel="tooltip" data-position="bottom" title="Get RSS Feed"  class="sm-icon sm-icon-rss"></a>
                             <a href="contact.html" data-rel="tooltip" data-position="bottom" title="Quick Email"  class="sm-icon sm-icon-email"></a>
-                            <a href="https://twitter.com/#!/pixelentity" data-position="bottom" data-rel="tooltip" title="Follow Us"  class="sm-icon sm-icon-twitter"></a>
+                            <a href="https://twitter.com/ClinDesk" data-position="bottom" data-rel="tooltip" title="Follow Us"  class="sm-icon sm-icon-twitter"></a>
                         </div>
 					</div>
 				</div>
 			</section>
-			
-			
-			
 		</footer>
-
 		<!--back to top button-->
 		<a href="#top" id="peBackToTop" class="label btt disabled"><span class="icon-chevron-up icon-white"></span></a>
-
 		<!-- import minified javascript -->
         <script type="text/javascript" src="{{ static('js/mentor.min.js') }}"></script>
-
 	</body>
 </html>
