--- a/templates/base.html
+++ b/templates/base.html
@@ -19,9 +19,9 @@
 		<script type="text/javascript">/*@cc_on'abbr article aside audio canvas details figcaption figure footer header hgroup mark meter nav output progress section summary subline time video'.replace(/\w+/g,function(n){document.createElement(n)})@*/</script>
 	<![endif]-->
 	<script type="text/javascript">(function(H){H.className=H.className.replace(/\bno-js\b/,'js')})(document.documentElement)</script>
-
 {#    <!-- favicon & iSO touch icons -->
     <link rel="shortcut icon" href="{{ static('favicon.jpg') }}" /> #}
+{% include 'ga_tracking_code.html' %}
 </head>
 
 <body>
