About headshots up & looks nice. Closes #16

--- a/templates/about.html
+++ b/templates/about.html
@@ -65,54 +65,44 @@
                 <div class="row-fluid">
                   <div class="innerSpacer">
                     <h1 id="team">Meet the Team</h1>
-                    <div class="row-fluid">
-                      <div class="span4"><h3>Nick Semenkovich</h3>
-                          <h4>Founder &amp; President</h4>
-                          <img src="{{ static('img/heads/semenko.jpg') }}" width="150"/>
-                          <p>Nick hails from OMG ONE LINER BIO</p>
-                      </div>
-
-
-                        <div class="span4"><h3>Nick Semenkovich</h3>
-                            <h4>Founder &amp; President</h4>
-                            <img src="{{ static('img/heads/semenko.jpg') }}" width="150"/>
-                            <p>Nick hails from OMG ONE LINER BIO</p>
-                        </div>
-
-
-
-                        <div class="span4"><h3>Nick Semenkovich</h3>
-                            <h4>Founder &amp; President</h4>
-                            <img src="{{ static('img/heads/semenko.jpg') }}" width="150"/>
-                            <p>Nick hails from OMG ONE LINER BIO</p>
-                        </div>
-
-                    </div>
-
                       <div class="row-fluid">
-                        <div class="span4"><h3>Nick Semenkovich</h3>
-                            <h4>Founder &amp; President</h4>
-                            <img src="{{ static('img/heads/semenko.jpg') }}" width="150"/>
-                            <p>Nick hails from OMG ONE LINER BIO</p>
-                        </div>
-
-
-                          <div class="span4"><h3>Nick Semenkovich</h3>
+                          <div class="span5 well">
+                              <h3>Nick Semenkovich</h3>
                               <h4>Founder &amp; President</h4>
-                              <img src="{{ static('img/heads/semenko.jpg') }}" width="150"/>
-                              <p>Nick hails from OMG ONE LINER BIO</p>
+                              <span style="float:left; padding-right: 10px;"><img src="{{ static('img/heads/semenko.jpg') }}" width="150"/></span>
+                              <span>asd lots of filler x text here asd lots of filler text here asd lots of filler
+                                  text here asd lots of filler text here asd lots of filler text here asd lots of filler
+                                  text here asd lots of filler text here asd lots of filler text here </span>
                           </div>
-
-
-
-                          <div class="span4"><h3>Nick Semenkovich</h3>
-                              <h4>Founder &amp; President</h4>
-                              <img src="{{ static('img/heads/semenko.jpg') }}" width="150"/>
-                              <p>Nick hails from OMG ONE LINER BIO</p>
+                          <div class="span5 well">
+                              <h3>David Germain</h3>
+                              <h4>Chief Operations Officer</h4>
+                              <span style="float:left; padding-right: 10px;"><img src="{{ static('img/heads/dgermain.jpg') }}" width="150"/></span>
+                              <span>asd lots of filler x text here asd lots of filler text here asd lots of filler
+                                  text here asd lots of filler text here asd lots of filler text here asd lots of filler
+                                  text here asd lots of filler text here asd lots of filler text here </span>
+                          </div>
+                      </div>
+                      <div class="row-fluid">
+                          <div class="span5 well">
+                              <h3>Ray Jean</h3>
+                              <h4>Chief Technology Officer</h4>
+                              <span style="float:left; padding-right: 10px;"><img src="{{ static('img/heads/rayjean.jpg') }}" width="150"/></span>
+                              <span>asd lots of filler x text here asd lots of filler text here asd lots of filler
+                                  text here asd lots of filler text here asd lots of filler text here asd lots of filler
+                                  text here asd lots of filler text here asd lots of filler text here </span>
+                          </div>
+                          <div class="span5 well">
+                              <h3>Aaron Mintz</h3>
+                              <h4>CFO &amp; Visionary</h4>
+                              <span style="float:left; padding-right: 10px;"><img src="{{ static('img/heads/aaronm.jpg') }}" width="150"/></span>
+                              <span>asd lots of filler x text here asd lots of filler text here asd lots of filler
+                                  text here asd lots of filler text here asd lots of filler text here asd lots of filler
+                                  text here asd lots of filler text here asd lots of filler text here </span>
                           </div>
 
                       </div>
-
+                      
                       <h1 id="governance">Non-Profit Governance</h1>
                      <div class="row-fluid">
 
