--- a/templates/about.html
+++ b/templates/about.html
@@ -68,37 +68,63 @@
                       <div class="row-fluid">
                           <div class="span5 well">
                               <h3>Nick Semenkovich</h3>
-                              <h4>Founder &amp; President</h4>
+                              <h4>Founder &amp; President
+                                  <span style="float:right">
+                                   <a href="https://twitter.com/semenko" data-rel="tooltip" title="Twitter" class="sm-icon sm-icon-twitter"></a>
+                                  <a href="https://www.facebook.com/semenko" data-rel="tooltip" title="Facebook" class="sm-icon sm-icon-facebook"></a>
+                                  </span>
+                              </h4>
                               <span style="float:left; padding-right: 10px;"><img src="{{ static('img/heads/semenko.jpg') }}" width="150"/></span>
                               <span>asd lots of filler x text here asd lots of filler text here asd lots of filler
                                   text here asd lots of filler text here asd lots of filler text here asd lots of filler
-                                  text here asd lots of filler text here asd lots of filler text here </span>
+                                  text here asd lots of filler text here asd lots of filler text here
+                                  <br/><br/><p>E-Mail: <a href="mailto:semenko@clindesk.org">semenko@clindesk.org</a></p>
+                              </span>
                           </div>
                           <div class="span5 well">
                               <h3>David Germain</h3>
-                              <h4>Chief Operations Officer</h4>
+                              <h4>Chief Operations Officer
+                                  <span style="float:right">
+                                   <a href="https://twitter.com/keepitgermain" data-rel="tooltip" title="Twitter" class="sm-icon sm-icon-twitter"></a>
+                                  <a href="https://www.facebook.com/dgermain" data-rel="tooltip" title="Facebook" class="sm-icon sm-icon-facebook"></a>
+                                  </span>
+                              </h4>
                               <span style="float:left; padding-right: 10px;"><img src="{{ static('img/heads/dgermain.jpg') }}" width="150"/></span>
                               <span>asd lots of filler x text here asd lots of filler text here asd lots of filler
                                   text here asd lots of filler text here asd lots of filler text here asd lots of filler
-                                  text here asd lots of filler text here asd lots of filler text here </span>
+                                  text here asd lots of filler text here asd lots of filler text here
+                                  <br/><br/><p>E-Mail: <a href="mailto:dgermain@clindesk.org">dgermain@clindesk.org</a></p>
+                              </span>
                           </div>
                       </div>
                       <div class="row-fluid">
                           <div class="span5 well">
                               <h3>Ray Jean</h3>
-                              <h4>Chief Technology Officer</h4>
+                              <h4>Chief Technology Officer
+                                  <span style="float:right">
+                                  <a href="https://www.facebook.com/raymond.a.jean" data-rel="tooltip" title="Facebook" class="sm-icon sm-icon-facebook"></a>
+                                  </span>
+                              </h4>
                               <span style="float:left; padding-right: 10px;"><img src="{{ static('img/heads/rayjean.jpg') }}" width="150"/></span>
                               <span>asd lots of filler x text here asd lots of filler text here asd lots of filler
                                   text here asd lots of filler text here asd lots of filler text here asd lots of filler
-                                  text here asd lots of filler text here asd lots of filler text here </span>
+                                  text here asd lots of filler text here asd lots of filler text here
+                                  <br/><br/><p>E-Mail: <a href="mailto:rayjean@clindesk.org">rayjean@clindesk.org</a></p>
+                              </span>
                           </div>
                           <div class="span5 well">
                               <h3>Aaron Mintz</h3>
-                              <h4>CFO &amp; Visionary</h4>
+                              <h4>CFO &amp; Visionary
+                                  <span style="float:right">
+                                  <a href="https://www.facebook.com/aaronmintz" data-rel="tooltip" title="Facebook" class="sm-icon sm-icon-facebook"></a>
+                                  </span>
+                              </h4>
                               <span style="float:left; padding-right: 10px;"><img src="{{ static('img/heads/aaronm.jpg') }}" width="150"/></span>
                               <span>asd lots of filler x text here asd lots of filler text here asd lots of filler
                                   text here asd lots of filler text here asd lots of filler text here asd lots of filler
-                                  text here asd lots of filler text here asd lots of filler text here </span>
+                                  text here asd lots of filler text here asd lots of filler text here
+                                  <br/><br/><p>E-Mail: <a href="mailto:aaronm@clindesk.org">aaronm@clindesk.org</a></p>
+                              </span>
                           </div>
 
                       </div>
