Add block for governance documents.

--- a/templates/about.html
+++ b/templates/about.html
@@ -131,9 +131,29 @@
                       
                       <h1 id="governance">Non-Profit Governance</h1>
                      <div class="row-fluid">
+{# TODO: Modularize these tabbed sections. #}
 
-                         documents go here
+                         <!--tabs-->
+
+                           <div class="span8">
+                             <ul class="nav nav-tabs">
+                               <li class="active"><a href="#home" data-toggle="tab">Overview</a></li>
+                               <li><a href="#profile" data-toggle="tab">State Filings</a></li>
+                               <li><a href="#messages" data-toggle="tab">Federal Filings</a></li>
+                               <li><a href="#settings" data-toggle="tab">Policies &amp; Bylaws</a></li>
+                             </ul>
+
+                             <div class="tab-content">
+                               <div class="tab-pane active" id="home">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Phasellus hendrerit. Pellentesque aliquet nibh nec urna. In nisi neque, aliquet vel, dapibus id, mattis vel, nisi. Sed pretium, ligula sollicitudin laoreet viverra, tortor libero sodales leo, eget blandit nunc tortor eu nibh. Nullam mollis.</div>
+                               <div class="tab-pane" id="profile">Phasellus hendrerit. Pellentesque aliquet nibh nec urna. In nisi neque, aliquet vel, dapibus id, mattis vel, nisi. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Sed pretium, ligula sollicitudin laoreet viverra, tortor libero sodales leo, eget blandit nunc tortor eu nibh. Nullam mollis.</div>
+                               <div class="tab-pane" id="messages">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Phasellus hendrerit. Pellentesque aliquet nibh nec urna. Sed pretium, ligula sollicitudin laoreet viverra, tortor libero sodales leo, eget blandit nunc tortor eu nibh. Nullam mollis. In nisi neque, aliquet vel, dapibus id, mattis vel, nisi.</div>
+                               <div class="tab-pane" id="settings">Sed pretium, ligula sollicitudin laoreet viverra, tortor libero sodales leo, eget blandit nunc tortor eu nibh. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Phasellus hendrerit. Pellentesque aliquet nibh nec urna. In nisi neque, aliquet vel, dapibus id, mattis vel, nisi. Nullam mollis.</div>
+                             </div>
+                            </div>
+                           <!--end tabs-->
+
                      </div>
+
 
                       <h1 id="contact">Contact Us</h1>
                      <div class="row-fluid">
