Add some filler text.

--- a/templates/about.html
+++ b/templates/about.html
@@ -138,16 +138,26 @@
                            <div class="span8">
                              <ul class="nav nav-tabs">
                                <li class="active"><a href="#home" data-toggle="tab">Overview</a></li>
-                               <li><a href="#profile" data-toggle="tab">State Filings</a></li>
-                               <li><a href="#messages" data-toggle="tab">Federal Filings</a></li>
-                               <li><a href="#settings" data-toggle="tab">Policies &amp; Bylaws</a></li>
+                               <li><a href="#docs-state" data-toggle="tab">State Filings</a></li>
+                               <li><a href="#docs-federal" data-toggle="tab">Federal Filings</a></li>
+                               <li><a href="#docs-internal" data-toggle="tab">Policies &amp; Bylaws</a></li>
                              </ul>
 
                              <div class="tab-content">
                                <div class="tab-pane active" id="home">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Phasellus hendrerit. Pellentesque aliquet nibh nec urna. In nisi neque, aliquet vel, dapibus id, mattis vel, nisi. Sed pretium, ligula sollicitudin laoreet viverra, tortor libero sodales leo, eget blandit nunc tortor eu nibh. Nullam mollis.</div>
-                               <div class="tab-pane" id="profile">Phasellus hendrerit. Pellentesque aliquet nibh nec urna. In nisi neque, aliquet vel, dapibus id, mattis vel, nisi. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Sed pretium, ligula sollicitudin laoreet viverra, tortor libero sodales leo, eget blandit nunc tortor eu nibh. Nullam mollis.</div>
-                               <div class="tab-pane" id="messages">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Phasellus hendrerit. Pellentesque aliquet nibh nec urna. Sed pretium, ligula sollicitudin laoreet viverra, tortor libero sodales leo, eget blandit nunc tortor eu nibh. Nullam mollis. In nisi neque, aliquet vel, dapibus id, mattis vel, nisi.</div>
-                               <div class="tab-pane" id="settings">Sed pretium, ligula sollicitudin laoreet viverra, tortor libero sodales leo, eget blandit nunc tortor eu nibh. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Phasellus hendrerit. Pellentesque aliquet nibh nec urna. In nisi neque, aliquet vel, dapibus id, mattis vel, nisi. Nullam mollis.</div>
+                               <div class="tab-pane" id="docs-state">
+                                   We are a non-profit corporation, incorporated in the State of Missouri. You can access our corporate documents through the Secretary of State's <a href="http://www.sos.mo.gov/business/" target="_blank">Business Services</a> site.
+                               <br/><br/><ul><li><a href="https://www.sos.mo.gov/BusinessEntity/soskb/Corp.asp?3353789" target="_blank">ClinDesk Registration &amp; Filings</a> (Charter #N01234644)</li>
+                               <li><a href="https://www.sos.mo.gov/BusinessEntity/soskb/Corp.asp?3353954" target="_blank">White Coat Academy Name Registration</a> (Charter #X01234744)</li></ul>
+                               </div>
+                               <div class="tab-pane" id="docs-federal">Our federal filings for tax-exempt status are currently pending. We will update this site with documents when we know more!<br/><br/>
+                               If you need our EIN (or other data, such as our DUNS number), please e-mail us at <a href="mailto:legal@clindesk.org">legal@clindesk.org</a>.</div>
+                               <div class="tab-pane" id="docs-internal">We make an effort to publicize our bylaws, conflict of interest policy, and other documents regarding our corporate governance.
+                               <br/><br/><ul>
+                                   <li>Corporate Bylaws</li>
+                                   <li>Conflict of Interest Policy</li>
+                                   <li></li>
+                               </ul></div>
                              </div>
                             </div>
                            <!--end tabs-->
