Add some e-mail contact info.

--- a/templates/about.html
+++ b/templates/about.html
@@ -167,8 +167,23 @@
 
                       <h1 id="contact">Contact Us</h1>
                      <div class="row-fluid">
-
-                         e-mail like whoa go here
+                         We love to hear from our visitors! If you have a question, please check the <a href="help.html">Help &amp; FAQ</a> page to see if your question has already been answered.
+                         <br/><br/>
+                         <div class="span8"><table class="table table-striped">
+                                                 <tbody>
+                                                   <tr>
+                                                     <td>General Questions &amp; Feedback</td>
+                                                     <td><a href="mailto:info@clindesk.org">info@clindesk.org</a></td>
+                                                   </tr>
+                                                   <tr>
+                                                     <td>Media &amp; PR Inquiries</td>
+                                                     <td><a href="mailto:media@clindesk.org">media@clindesk.org</a></td>
+                                                   </tr>
+                                                   <tr>
+                                                     <td>Legal Inquiries &amp; DMCA Notificant</td>
+                                                     <td><a href="mailto:legal@clindesk.org">legal@clindesk.org</a></td>
+                                                   </tr>
+                             </tbody></table></div>
                      </div>
 
 
