Added some cute quora / github media links.
You can find all these in the /elements.html file from Mentor.

--- a/templates/about.html
+++ b/templates/about.html
@@ -70,8 +70,10 @@
                               <h3>Nick Semenkovich</h3>
                               <h4>Founder &amp; President
                                   <span style="float:right">
-                                   <a href="https://twitter.com/semenko" data-rel="tooltip" title="Twitter" class="sm-icon sm-icon-twitter"></a>
-                                  <a href="https://www.facebook.com/semenko" data-rel="tooltip" title="Facebook" class="sm-icon sm-icon-facebook"></a>
+                                      <a href="https://twitter.com/semenko" data-rel="tooltip" title="Twitter" class="sm-icon sm-icon-twitter"></a>
+                                      <a href="https://www.facebook.com/semenko" data-rel="tooltip" title="Facebook" class="sm-icon sm-icon-facebook"></a>
+                                      <a href="https://github.com/semenko" data-rel="tooltip" title="GitHub" class="sm-icon sm-icon-github"></a>
+                                      <a href="http://www.quora.com/Nick-Semenkovich" data-rel="tooltip" title="Quora" class="sm-icon sm-icon-quora"></a>
                                   </span>
                               </h4>
                               <span style="float:left; padding-right: 10px;"><img src="{{ static('img/heads/semenko.jpg') }}" width="150"/></span>
