Create a disclaimer template block.

--- a/templates/help.html
+++ b/templates/help.html
@@ -20,6 +20,8 @@
                       </div>
                     </div>
 #}
+                      {% include "elements/disclaimer.html" %}
+
                     <div class="row-fluid pageTitle">
                       <div class="span12"><h1>FAQ Page Template</h1></div>
                     </div>
