Setup a disclaimer. When clicked, we set a 24-hour cookie for hiding the disclaimer.
TODO: Look over disclaimer text.
TODO: Change expires time? e.g. Renew cookie every day for up to 5 days?
TODO: Limit cookie to /disease/ subpages only?
TODO: Move cookie code to separate js file?

--- a/templates/base.html
+++ b/templates/base.html
@@ -239,5 +239,23 @@
 		<a href="#top" id="peBackToTop" class="label btt disabled"><span class="icon-chevron-up icon-white"></span></a>
 		<!-- import minified javascript -->
         <script type="text/javascript" src="{{ static('js/mentor.min.js') }}"></script>
+    {# TODO: Move this to external JS or something. #}
+    <script type="text/javascript">
+        $(document).ready(function(){
+            if (document.cookie.match('disclaimer') != null) {
+                $('#disclaimer').hide();
+            }
+            $('#ackbutton').click(function(){
+                $.ajax({
+                    type: "POST",
+                    url: "/setcookie",
+                    data: "ack=True",
+                    success: function() {
+                        $('#disclaimer').hide();
+                    }
+                });
+            });
+        });
+    </script>
 	</body>
 </html>
