Disclaimer logic: 10-min TTL on non-prod. Change some values.

--- a/templates/base.html
+++ b/templates/base.html
@@ -240,6 +240,7 @@
 		<!-- import minified javascript -->
         <script type="text/javascript" src="{{ static('js/mentor.min.js') }}"></script>
     {# TODO: Move this to external JS or something. #}
+    {# TODO: Can't JS set the cookie? Why not use JS instead of Flask? #}
     <script type="text/javascript">
         $(document).ready(function(){
             if (document.cookie.match('disclaimer') != null) {
@@ -249,7 +250,6 @@
                 $.ajax({
                     type: "POST",
                     url: "/setcookie",
-                    data: "ack=True",
                     success: function() {
                         $('#disclaimer').hide();
                     }
