Add some hilarious about us filler text.

--- a/templates/about.html
+++ b/templates/about.html
@@ -77,9 +77,8 @@
                                   </span>
                               </h4>
                               <span style="float:left; padding-right: 10px;"><img src="{{ static('img/heads/semenko.jpg') }}" width="150"/></span>
-                              <span>asd lots of filler x text here asd lots of filler text here asd lots of filler
-                                  text here asd lots of filler text here asd lots of filler text here asd lots of filler
-                                  text here asd lots of filler text here asd lots of filler text here
+                              <span>Nick hails from M.I.T., where he served as Editor in Chief of the student newspaper The Tech. He's currently an MD/PhD student
+                                  in the lab of Dr. Jeffrey Gordon, where he's focused on developing bacteriophage therapeutics targeting the microbiome.
                                   <br/><br/><p>E-Mail: <a href="mailto:semenko@clindesk.org">semenko@clindesk.org</a></p>
                               </span>
                           </div>
@@ -92,9 +91,8 @@
                                   </span>
                               </h4>
                               <span style="float:left; padding-right: 10px;"><img src="{{ static('img/heads/dgermain.jpg') }}" width="150"/></span>
-                              <span>asd lots of filler x text here asd lots of filler text here asd lots of filler
-                                  text here asd lots of filler text here asd lots of filler text here asd lots of filler
-                                  text here asd lots of filler text here asd lots of filler text here
+                              <span>David spent his undergrad at Stanford and will one day cure leukemia. He's currently an MD/PhD student in the lab of Dr. Tim Ley,
+                                    focused on epigenetic regulatory mechanisms of AML. When not at lab, he spends time entertaining his magnificient cat, Osmo.
                                   <br/><br/><p>E-Mail: <a href="mailto:dgermain@clindesk.org">dgermain@clindesk.org</a></p>
                               </span>
                           </div>
@@ -108,10 +106,9 @@
                                   </span>
                               </h4>
                               <span style="float:left; padding-right: 10px;"><img src="{{ static('img/heads/rayjean.jpg') }}" width="150"/></span>
-                              <span>asd lots of filler x text here asd lots of filler text here asd lots of filler
-                                  text here asd lots of filler text here asd lots of filler text here asd lots of filler
-                                  text here asd lots of filler text here asd lots of filler text here
-                                  <br/><br/><p>E-Mail: <a href="mailto:rayjean@clindesk.org">rayjean@clindesk.org</a></p>
+                              <span>Ray did his undergrad at Harvard where he majored in @@@@@@. He's now a fourth year medical student, taking a year off to
+                                  expand the world's medical knowledge while doing research with Dr. Jay Picarillo.
+                                  <br/><br/><br/><p>E-Mail: <a href="mailto:rayjean@clindesk.org">rayjean@clindesk.org</a></p>
                               </span>
                           </div>
                           <div class="span5 well">
@@ -122,10 +119,9 @@
                                   </span>
                               </h4>
                               <span style="float:left; padding-right: 10px;"><img src="{{ static('img/heads/aaronm.jpg') }}" width="150"/></span>
-                              <span>asd lots of filler x text here asd lots of filler text here asd lots of filler
-                                  text here asd lots of filler text here asd lots of filler text here asd lots of filler
-                                  text here asd lots of filler text here asd lots of filler text here
-                                  <br/><br/><p>E-Mail: <a href="mailto:aaronm@clindesk.org">aaronm@clindesk.org</a></p>
+                              <span>Aaron spent his undergrad years at Stanford, and is currently a fourth year medical student. After his residency, Aaron will
+                                  likely direct operations and innovation at a large academic medical center.
+                                  <br/><br/><br/><p>E-Mail: <a href="mailto:aaronm@clindesk.org">aaronm@clindesk.org</a></p>
                               </span>
                           </div>
 
