Extra docs filler text.

--- a/templates/about.html
+++ b/templates/about.html
@@ -142,7 +142,11 @@
                              </ul>
 
                              <div class="tab-content">
-                               <div class="tab-pane active" id="home">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Phasellus hendrerit. Pellentesque aliquet nibh nec urna. In nisi neque, aliquet vel, dapibus id, mattis vel, nisi. Sed pretium, ligula sollicitudin laoreet viverra, tortor libero sodales leo, eget blandit nunc tortor eu nibh. Nullam mollis.</div>
+                               <div class="tab-pane active" id="home">
+                                   <p>At ClinDesk and White Coat Academy, we try to be as transparent as possible with our finances and governance
+                                   (in the hopes that you'll <a href="support.html">donate</a> to help keep us going!).</p>
+                               <p>You can see some of our documents listed in the above tabs. Over the next year, we'll expand these listings as we grow.</p>
+                               <p>Some documents &mdash; such as the IRS 990 &mdash; won't be available until the next fiscal year, since we're just geting off the ground.</p></div>
                                <div class="tab-pane" id="docs-state">
                                    We are a non-profit corporation, incorporated in the State of Missouri. You can access our corporate documents through the Secretary of State's <a href="http://www.sos.mo.gov/business/" target="_blank">Business Services</a> site.
                                <br/><br/><ul><li><a href="https://www.sos.mo.gov/BusinessEntity/soskb/Corp.asp?3353789" target="_blank">ClinDesk Registration &amp; Filings</a> (Charter #N01234644)</li>
