--- a/templates/index.html
+++ b/templates/index.html
@@ -98,7 +98,7 @@
 								<div class="title">
 									<span class="icon-picture"></span><a href="#">Heart and Cardiovascular</a>
 								</div>
-								<p>Heart attacks, chest pain, stents, CABG, etc.</p>
+								<p>Heart attacks, chest pain, stents, CABG ...</p>
 							</div>
 						</div>
 
@@ -117,9 +117,9 @@
 									<span></span>
 								</a>
 								<div class="title">
-									<span class="icon-th"></span><a href="#">Fullscreen Gallery (fill)</a>
+									<span class="icon-th"></span><a href="#">Gastrointestinal </a>
 								</div>
-								<p>Lorem ipsum dolor sitam et conse caetue adi pit mit solsz..</p>
+								<p>Diarrhea, Constipation, Colon Cancer ...</p>
 							</div>
 						</div>
 
@@ -131,9 +131,9 @@
 									<span></span>
 								</a>
 								<div class="title">
-									<span class="icon-facetime-video"></span><a href="#">Lightbox Video (YouTiube)</a>
+									<span class="icon-facetime-video"></span><a href="#">Pulmonary</a>
 								</div>
-								<p>Lorem ipsum dolor sitam et conse caetue adi pit mit solsz..</p>
+								<p>COPD, Asthma ...</p>
 							</div>
 						</div>
 
@@ -145,9 +145,9 @@
 									<span></span>
 								</a>
 								<div class="title">
-									<span class="icon-file"></span><a href="#">Project Page Link</a>
+									<span class="icon-file"></span><a href="#">Infectious Disease</a>
 								</div>
-								<p>Lorem ipsum dolor sitam et conse caetue adi pit mit solsz..</p>
+								<p>Pneumonia, Influenza, HIV ...</p>
 							</div>
 						</div>
 
@@ -158,9 +158,9 @@
 									<span></span>
 								</a>
 								<div class="title">
-									<span class="icon-film"></span><a href="#">Vdieo Project Link</a>
+									<span class="icon-film"></span><a href="#">Oncology</a>
 								</div>
-								<p>Lorem ipsum dolor sitam et conse caetue adi pit mit solsz..</p>
+								<p>Breast cancer, leukemia, lung cancer ... </p>
 							</div>
 						</div>
 
