Force GA to always track load times.

--- a/templates/ga_tracking_code.html
+++ b/templates/ga_tracking_code.html
@@ -11,6 +11,7 @@ WCA: UA-32988270-2
 {%- elif "clindesk" in request.environ.HTTP_HOST -%}
   _gaq.push(['_setAccount', 'UA-32988270-1']);
 {% endif %}
+  _gaq.push(['_setSiteSpeedSampleRate', 100]);
   _gaq.push(['_trackPageview']);
   (function() {
     var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
