--- a/templates/support.html
+++ b/templates/support.html
@@ -19,7 +19,7 @@
                               <div class="span5">
                               <div class="hero-unit">
                                  <h2>Help Open Medicine</h2>
-                                 <p>Here's a donor piece of text. Fill this in. It can be long and stuff, yo. orem ipsum dolor sit amet, consectetuer adipiscing elit donec odio. Quisque volutpat mattis eros.</p>
+                                 <p>We're trying our best to open medical education, but bandwidth and development costs are expensive! </p>
                                  <p>
                                    <a class="btn btn-info btn-large"><i class="icon-lock icon-white"></i>
                                     Donate Now
@@ -32,42 +32,13 @@
                           </div>
 
 
-                          <div class="row-fluid">
-                            <div class="span4">
-                              <ul>
-                                <li><span class="icon-ok"></span>Aliquam tincidunt.</li>
-                                <li><span class="icon-heart"></span>Vestibulum auctor.</li>
-                                <li><span class="icon-star"></span>Nunc dignissim.</li>
-                                <li><span class="icon-remove"></span>Vivamus vestibulum.</li>
-                              </ul>
-                            </div>
-
-                             <div class="span4">
-                              <ol>
-                                <li>Aliquam tincidunt.</li>
-                                <li>Vestibulum auctor.</li>
-                                <li>Nunc dignissim.</li>
-                                <li>Vivamus vestibulum.</li>
-                              </ol>
-                            </div>
-
-                              <div class="span4">
-                              <ul>
-                                <li><span class="icon-ok-circle"></span>Aliquam tincidunt.</li>
-                                <li><span class="icon-remove-circle"></span>Vestibulum auctor.</li>
-                                <li><span class="icon-question-sign"></span>Nunc dignissim.</li>
-                                <li><span class="icon-plus-sign"></span>Vivamus vestibulum.</li>
-                              </ul>
-                            </div>
-                          </div>
-
                           <!--hero units small & colored-->
 
                           <div class="row-fluid">
                             <div class="span6">
                               <div class="hero-unit">
-                                <h1>Sponsor a Disease</h1>
-                                <p>Lorem ipsum dolor sit amet</p>
+                                <h1 style="color:grey">Sponsor a Disease</h1>
+                                <br/><p>Lorem ipsum dolor sit amet</p>
                                 <p>
                                   <a class="btn btn-inverse">
                                    More
@@ -78,7 +49,7 @@
 
                             <div class="span6">
                               <div class="hero-unit">
-                                <h1>Sponsor a XYZ?</h1>
+                                <h1 style="color:grey">Sponsor a </h1>
                                 <p>Lorem ipsum dolor sit amet</p>
                                 <p>
                                   <a class="btn btn-inverse">
@@ -89,7 +60,8 @@
                             </div>
                           </div>
 
-                          <!--columns-->
+{# In the future, add this back. #}
+{#                          <!--columns-->
 
                           <div class="row-fluid">
                             <div class="span6">
@@ -129,10 +101,7 @@
                       </div>
                     </div>
                     <!--end post-->
-
-
-
-
+#}
 
                   </div>
                 </div>
